--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 <body ng-app="socketApp" ng-controller="mainCtrl">
 	<div ng-view></div>
-	<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+	<!-- <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script> -->
 	<script src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js'></script>
 	<script src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js'></script>
 
